--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Zaluea",
-    "description": "Zaluea is made for bypassing web restrictions.",
+    "name": "Bmath",
+    "description": "Zaluea is made for math help",
     "repository": "https://github.com/TheIcy/Zaluea",
     "logo": "https://github.com/TheIcy/Zaluea/blob/main/Site/images/logo.png?raw=true",
-    "keywords": ["zaluea", "games", "Ultraviolet"]
+    "keywords": ["Bmath", "games", "Ultraviolet"]
 }
